[package]
name = "shadowsocks-proxy-plugin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "proxy-plugin-local"
path = "src/main.rs"

[features]
mimalloc = ["dep:mimalloc"]

[dependencies]
mimalloc = { version = "0.1.41", optional = true }

tokio = { version = "1.21.2", features = [
    "net",
    "rt",
    "rt-multi-thread",
    "macros",
    "io-util",
] }
tracing-subscriber = { version = "0.3", features = [
    "std",
    "fmt",
    "env-filter",
    "time",
    "local-time",
] }
time = "0.3"
log = "0.4"
serde_urlencoded = "0.7"
serde = { version = "1.0", features = ["derive"] }
httparse = "1.9"

shadowsocks = { git = "https://github.com/shadowsocks/shadowsocks-rust.git", default-features = false, features = [
    "hickory-dns",
] }
